brat/test/golden/error/noovers.brat.golden
Error in test/golden/error/noovers.brat@FC {start = Pos {line = 1, col = 1}, end = Pos {line = 2, col = 13}}:
f(Int) -> []
^^^^^^^^^^^^
f(a, b) = []
^^^^^^^^^^^^

  Unification error: Pattern doesn't match expected length for constructor args

